objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Opening__c</fullName>
        <label>Job Opening</label>
        <referenceTo>Job_Opening__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE(  photo_url__c , &quot;Applicant&quot;, 100,70)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_of_Interview__c</fullName>
        <label>Time of Interview</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>phoneformat__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Phone__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>phoneformat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>photo_url__c</fullName>
        <label>photo url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Job_Opening__c</columns>
        <columns>Phone__c</columns>
        <columns>Referrer__c</columns>
        <columns>Time_of_Interview__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>